# phigan

./: .gitignore  README.md  env.yaml  ipf.R  ipf.py  ipf_example1.R  ipf_example1.py  ipf_us.py  ipfn_tester.py  parallel_pool.py  parallel_process.py  phigan.py  pyproject.toml  sdv_example.py  trs.py
data/: IPFexamples-master.txt
data/_sipher2020_constraints/: 2011_census_economic.csv  2011_census_ethnicity.csv  2011_census_general_health.csv  2011_census_hh_composition.csv  2011_census_hh_tenure.csv  2011_census_marital.csv  2011_census_qualification.csv  2020_est_age_sex.csv  _notes_HR_090525.txt  licenses_sources.txt
data/_sipher2020_constraints/constraints_standardised/: age-sex.csv  age.csv  economic.csv  ethnicity.csv  general_health.csv  hh_composition.csv  hh_tenure.csv  marital.csv  qualification.csv  sex.csv
src/synthpop_sandbox/: ipf_example1.py  ipf_scratch.py  ipf_tools.R  random_replacement.py  sdv_example.py
src/synthpop_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
